--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body style="background-color:black;">
     <img src="mds-logo.png" alt="MDS Insure Logo" align="middle">
     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,28,0" width="445" height="334">
-        <param name="movie" value="jogo-situacoes-transito.swf">
+        <param name="movie" value="mds-jogo-transito.swf">
         <param name="quality" value="high">
-        <embed src="jogo-situacoes-transito.swf" quality="high" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="800" height="600"></embed>
+        <embed src="mds-jogo-transito.swf" quality="high" pluginspage="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="800" height="600"></embed>
     </object>
 </body>
 </html>
