Background color changed to blue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Jogo Situações no Trânsito</title> 
 </head>
 
-<body style="background-color:black;">
+<body style="background-color:#0F2B5B;">
     <img src="mds-logo.png" alt="MDS Insure Logo" align="middle">
     <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,28,0" width="445" height="334">
         <param name="movie" value="mds-jogo-transito.swf">
